--- a/img/.picasaoriginals/.picasa.ini
+++ b/img/.picasaoriginals/.picasa.ini
@@ -11,3 +11,17 @@ moddate=d065d22da6acd401
 width=641
 height=342
 textactive=0
+[log.jpg]
+filters=crop64=1,9006ffff;
+crop=rect64(9006ffff)
+moddate=8ba52cdd27aed401
+width=1310
+height=234
+textactive=0
+[wy.jpg]
+filters=crop64=1,93400000ffffffff;
+crop=rect64(93400000ffffffff)
+moddate=a5dd648348b1d401
+width=831
+height=359
+textactive=0
