--- a/img/.picasaoriginals/.picasa.ini
+++ b/img/.picasaoriginals/.picasa.ini
@@ -25,3 +25,10 @@ moddate=a5dd648348b1d401
 width=831
 height=359
 textactive=0
+[cp1.jpg]
+filters=crop64=1,7266ffffff76;
+crop=rect64(7266ffffff76)
+moddate=631fe3142ec6d401
+width=960
+height=960
+textactive=0
